# gaveron

./: .gitignore  DEPLOY.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: gaveron.yaml
data/: demo_aircraft.json
gaveron/: __init__.py  __main__.py  config.py  decoder.py  feed.py  history.py  server.py  simulator.py  trackdb.py
gaveron/static/: history.html  index.html
nginx/: gaveron.conf
systemd/: gaveron.service
tests/: test_decoder.py  test_server.py
